chore: update ui

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg/ffmpeg": "^0.11.6",
     "@vueuse/core": "^9.5.0",
     "jszip": "^3.10.1",
+    "naive-ui": "^2.34.1",
     "pinia": "^2.0.23",
     "vue": "^3.2.45"
   },
