--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jszip": "^3.10.1",
     "naive-ui": "^2.34.1",
     "pinia": "^2.0.23",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-i18n": "9"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.10",
