--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ffmpeg/core": "^0.11.0",
-    "@ffmpeg/ffmpeg": "^0.11.6",
-    "@vueuse/core": "^9.5.0",
+    "@ffmpeg/core": "^0.12.4",
+    "@ffmpeg/ffmpeg": "^0.12.7",
+    "@ffmpeg/util": "^0.12.1",
+    "@vueuse/core": "^10.5.0",
     "jszip": "^3.10.1",
-    "naive-ui": "^2.34.1",
-    "pinia": "^2.0.23",
-    "vue": "^3.2.45",
-    "vue-i18n": "9"
+    "naive-ui": "^2.35.0",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.6",
+    "vue-i18n": "9.5.0"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.10",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "typescript": "^4.9.3",
-    "unocss": "^0.46.5",
-    "unplugin-auto-import": "^0.11.4",
-    "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.4",
-    "vue-tsc": "^1.0.9"
+    "@iconify-json/carbon": "^1.1.21",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "typescript": "^5.2.2",
+    "unocss": "^0.57.0",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^4.5.0",
+    "vue-tsc": "^1.8.19"
   }
 }
